--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,20 @@
 Package: describe
-Title: What the Package Does (One Line, Title Case)
+Title: Compute varied descriptive statistics,create visualizations and handle missing data
 Version: 0.0.0.9000
 Authors@R: 
-    person("JP", "Monteagudo", , "jpmonteagudo2014@gmail.com", role = c("aut", "cre"),
+    person("JP", "Monteagudo", , "jpmonteagudo2014@gmail.com", role = c("aut", "cre","cph"),
            comment = c(ORCID = "0009-0003-6465-6658"))
-Description: What the package does (one paragraph).
-License: MIT + file LICENSE
+Description: To provide estimates of central tendency for different distributions along with visualization options and imputation methods for handling missing data.
+License: AGPL (>= 3) + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports: 
+    betareg,
+    MASS,
+    nnet,
+    norm,
+    robustbase
+Suggests: 
+    spelling
+Language: en-US
