added new functions, passed r cmd checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(check.mar)
 export(check.mcar)
 export(check.missing)
-export(cm.impute)
+export(cmean.impute)
+export(coldeck.impute)
+export(gen.mar)
 export(gen.mcar)
 export(geom.mad)
 export(geom.mean)
@@ -14,6 +16,7 @@ export(geom.zscore)
 export(grouped.mean)
 export(grouped.median)
 export(harm.mean)
+export(hotdeck.impute)
 export(mar.transform)
 export(mcar.transform)
 export(mnar.transform)
