--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ License: AGPL (>= 3) + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://github.com/jpmonteagudo28/describe
+BugReports: https://github.com/jpmonteagudo28/describe/issues
 Imports: 
     betareg,
     MASS,
