edit workflows and help files for all functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,6 @@ export(mar.transform)
 export(mcar.transform)
 export(mnar.transform)
 export(pmean.match)
+export(quad.mean)
 export(stoc.impute)
-export(w.harm.mean)
+export(weight.harm.mean)
