--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cmean.impute)
 export(coldeck.impute)
 export(gen.mar)
 export(gen.mcar)
+export(gen.mnar)
 export(geom.mad)
 export(geom.mean)
 export(geom.median)
@@ -17,10 +18,16 @@ export(grouped.mean)
 export(grouped.median)
 export(harm.mean)
 export(hotdeck.impute)
+export(kurtosis)
 export(mar.transform)
 export(mcar.transform)
 export(mnar.transform)
 export(pmean.match)
 export(quad.mean)
+export(skewness)
 export(stoc.impute)
+export(variance)
 export(weight.harm.mean)
+export(z.scores)
+importFrom(Hmisc,rcorr)
+importFrom(ppcor,pcor.test)
