--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ URL: https://github.com/jpmonteagudo28/describe
 BugReports: https://github.com/jpmonteagudo28/describe/issues
 Imports: 
     betareg,
+    boot,
     dplyr,
     Hmisc,
     MASS,
